--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<html>
+<head>
+</head>
+<body>
+
+<p>Hello World!</p>
+<img src="https://stylesgt.github.io/images/grool.gif">
+
+</body>
+</html>
+
